--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 body {
     font-family: 'Open Sans', sans-serif;
+    color: #7581a1;
+    line-height: 26px;
+    font-size: 16px;
+
 }
 
 a {
@@ -20,6 +24,31 @@ h1 {
 
 .btn-free {
     color: #fff;
-    font-weight: 400;
+
     background-color: #1085e4;
+}
+
+.grid h2 {
+    color: #192b59;
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.grid h2 span {
+    display: block;
+    color: #1085e4;
+    font-size: 14px;
+    text-transform: uppercase;
+}
+
+.grid-item h3 {
+    color: #192b59;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.grid-item a {
+    color: #1085e4;
+    font-size: 14px;
+    font-weight: 600px; 
 }
